--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                 <div class="profile-photo">
                     <img src="./assets/img/foto.png" alt="foto de perfil">
                 </div>
-                <a href="#" class="insta-login">Continue como JessicaSant</a>
+                <a href="#" class="insta-login">Continue como jessica_saantos</a>
                 <a href="#" class="insta-logout">Remover conta</a>
             </div>
 
             <div class="group">
-                <p class="not-account">Não é JessicaSant?</p>
+                <p class="not-account">Não é jessica_saantos?</p>
                 <p class="not-account">
                     <span class="link-blue">Alterar contas</span>
                     ou
@@ -40,8 +40,8 @@
                 </p>
 
                 <div class="download">
-                    <a href=""></a>
-                    <a href=""></a>
+                    <a class="app-download" href="#"></a>
+                    <a class="app-download" href="#"></a>
                 </div>
             </div>
         </div>
